--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <img src="img/miss bloom 4.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in">
             <img src="img/miss bloom 5.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in">
             <img src="img/miss bloom 6.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in">
-            <!-- <img src="img/miss bloom 7.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in"> -->
-            <!-- <img src="img/miss bloom 8.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in"> -->
+            <img src="img/miss bloom 7.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in">
+            <img src="img/miss bloom 8.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in">
         </div>
         
         <div class="queen-spotlight" data-aos="fade-up">
