--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <!-- AOS Animation Library -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
-    <link rel="shortcut icon" href="./img/logo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo.jpeg" type="image/x-icon">
 </head>
 <body>
     <header class="header">
