--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <!-- AOS Animation Library -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
-    <link rel="shortcut icon" href="img/logo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/logo.jpeg" type="image/x-icon">
 </head>
 <body>
     <header class="header">
@@ -72,8 +72,8 @@
             <img src="img/miss bloom 4.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in">
             <img src="img/miss bloom 5.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in">
             <img src="img/miss bloom 6.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in">
-            <img src="img/miss bloom 7.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in">
-            <img src="img/miss bloom 8.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in">
+            <!-- <img src="img/miss bloom 7.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in"> -->
+            <!-- <img src="img/miss bloom 8.jpeg" alt="Miss Bloom Global Event" data-aos="zoom-in"> -->
         </div>
         
         <div class="queen-spotlight" data-aos="fade-up">
@@ -163,18 +163,18 @@
 
             <!-- How to Apply -->
             <div class="how-to-apply">
-                <h4>How to Apply</h4>
-                <div class="contact-details">
-                    <p><i class="fas fa-envelope"></i> Email: <a href="mailto:missbloomglobal@gmail.com">missbloomglobal@gmail.com</a></p>
-                    <p><i class="fab fa-whatsapp"></i> WhatsApp: +233598725709</p>
-                    <p><i class="fas fa-calendar-alt"></i> Application Deadline: April 30th, 2025</p>
-                </div>
-                <div class="action-buttons">
-                    <a href="registration_fee.html" class="btn registration-btn">Registration Fee</a>
-                    <a href="pre_pageant_event.html" class="btn events-btn">Pre-Pageant Events</a>
-                </div>
-            </div>
-        </div>
+    <h4>How to Apply</h4>
+    <img src="img/how to apply.jpeg" alt="Apply Image" class="apply-image">
+    <div class="contact-details">
+        <p><i class="fas fa-envelope"></i> Email: <a href="mailto:missbloomglobal@gmail.com">missbloomglobal@gmail.com</a></p>
+        <p><i class="fab fa-whatsapp"></i> WhatsApp: +233598725709</p>
+        <p><i class="fas fa-calendar-alt"></i> Application Deadline: April 30th, 2025</p>
+    </div>
+    <div class="action-buttons">
+        <a href="registration_fee.html" class="btn registration-btn">Registration Fee</a>
+        <a href="pre_pageant_event.html" class="btn events-btn">Pre-Pageant Events</a>
+    </div>
+</div>
 
         <!-- Contestant Application Form -->
         <!-- <div class="contestant-recruitment">
