--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
     <div class="action-buttons">
         <a href="registration_fee.html" class="btn registration-btn">Registration Fee</a>
         <a href="pre_pageant_event.html" class="btn events-btn">Pre-Pageant Events</a>
+        <a href="national_director.html" class="btn events-btn">National Director Agreement</a>
     </div>
 </div>
 
