--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <h3>Contestant Application</h3>
             <div class="application-form">
                 <form id ="recruitmentForm" action="https://api.web3forms.com/submit" method="POST">
-                     <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
+                     <input type="hidden" name="access_key" value="d4f8fc91-38ff-4054-9540-7d8325b7137c">
                     <div class="form-group">
                         <input type="text" placeholder="Full Name" required>
                     </div>
